# odyssey

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
scripts/: bootstrap.py
seeds/: knowledge_seeds.json
src/odyssey/: __init__.py  config.py
src/odyssey/agents/: __init__.py  base.py  bus.py  factory.py  lifecycle.py  registry.py  router.py
src/odyssey/agents/core/: __init__.py  architect.py  cartographer.py  chronicler.py  navigator.py  sentinel.py
src/odyssey/api/: __init__.py  app.py
src/odyssey/api/middleware/: auth.py  telemetry.py
src/odyssey/api/routes/: admin.py  chat.py  enterprise.py  knowledge.py
src/odyssey/cortex/: __init__.py  engine.py  evolution_planner.py  gap_detector.py  governor.py  introspector.py  models.py  validator.py
src/odyssey/enterprise/: __init__.py  alerts.py  decisions.py  models.py
src/odyssey/knowledge/: __init__.py  confidence.py  graph.py  models.py  ontology.py
src/odyssey/knowledge/sources/: __init__.py
src/odyssey/llm/: client.py
src/odyssey/storage/: __init__.py  neo4j.py  postgres.py  redis.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/alerts/: page.tsx
web/app/chat/: page.tsx
web/app/cortex/: page.tsx
web/app/decisions/: page.tsx
web/app/enterprise/: page.tsx
web/app/knowledge/: page.tsx
web/components/: providers.tsx
web/components/layout/: sidebar.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx
web/lib/: api.ts  enterprise-context.tsx  types.ts
